--- a/security/rbac/cluster-readonly-rolebinding.yml
+++ b/security/rbac/cluster-readonly-rolebinding.yml
@@ -5,8 +5,7 @@ metadata:
   name: cluster-readonly-rolebinding
 subjects:
 - kind: User
-  name: testuser # Name is case sensitive
-  #namespace: prod 
+  name: naresh # Name is case sensitive
 roleRef:
   kind: ClusterRole #this must be Role or ClusterRole
   name: cluster-readonly-role # this must match the name of the Role or ClusterRole you wish to bind to
