--- a/dashboard/cluster-admin-role-access.yml
+++ b/dashboard/cluster-admin-role-access.yml
@@ -19,5 +19,5 @@ subjects:
   namespace: kube-system
 roleRef:
   kind: ClusterRole #this must be Role or ClusterRole
-  name: admin # this must match the name of the Role or ClusterRole you wish to bind to
+  name: cluster-admin # this must match the name of the Role or ClusterRole you wish to bind to
   apiGroup: rbac.authorization.k8s.io
