--- a/controllers/deployment-ex1.yml
+++ b/controllers/deployment-ex1.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: mydeployment
 spec:
-  replicas: 3
+  replicas: 4
   selector:
     matchLabels:
       app: myapp
@@ -14,6 +14,5 @@ spec:
     spec:
       containers:
       - name: myapp-cont
-        image: lerndevops/samplepyapp:v1
-        ports:
-        - containerPort: 3000
+        image: lerndevops/netshoot
+        command: ["/bin/bash", "-c", "sleep 3600"]
